create_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: team-one
spec: {}
status: {}
